[package]
name = "rust-tlpi"
version = "0.1.0"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2.58"
nix = "0.14.1"
clap = "2.33.0"

[[bin]]
name = "ex_tee"
path = "src/fileio/ex_tee.rs"

[[bin]]
name = "ex_seek_write"
path = "src/fileio/ex_seek_write.rs"
